--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@
 ignore =
     W504  # line break after binary operator
 max-line-length = 79
-select = C,E,F,W,B,B950 # black formating options
+select = C,E,F,W,B,B950 # black formatting options
 
 
 [pydocstyle]
