Modify pydocstyle configuration

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,5 +11,5 @@ select = C,E,F,W,B,B950 # black formatting options
 
 
 [pydocstyle]
-match = (?!__)(?!_helpers).*\.py
+match = (?!__).*\.py
 match_dir = [^\.][^\docs].*
