add versioneer and formating

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,11 +5,22 @@
 
 # Note: there cannot be spaces after comma's here
 ignore =
-    W503,W504  # line break after binary operator
+    W503,W504   # line break after binary operator
+    E203        # E203 whitespace before ':' (not PEP8 compliant anyway)
 max-line-length = 88
 select = C,E,F,W,B,B950 # black formatting options
 
+exclude =
+    versioneer.py
+    .\weldx\__init__.py
 
 [pydocstyle]
 match = (?!__).*\.py
 match_dir = [^\.][^\docs].*
+
+[versioneer]
+VCS = git
+versionfile_source = weldx/_version.py
+versionfile_build = weldx/_version.py
+tag_prefix =
+parentdir_prefix =
