manual changes for ShieldingGasType and small run example

--- a/weldx-standard/schemas/weldx.bam.de/weldx/aws/process/shielding_gas_type-1.0.0.yaml
+++ b/weldx-standard/schemas/weldx.bam.de/weldx/aws/process/shielding_gas_type-1.0.0.yaml
@@ -15,7 +15,7 @@ properties:
       A single gas element.
     type: array
     items:
-      type: <TODO ASDF_TYPE(GasComponent)>
+      $ref: gas_component-1.0.0
 
   common_name:
     description: |
