completed working example

--- a/weldx-standard/schemas/weldx.bam.de/weldx/aws/design/base_metal-1.0.0.yaml
+++ b/weldx-standard/schemas/weldx.bam.de/weldx/aws/design/base_metal-1.0.0.yaml
@@ -7,7 +7,7 @@ tag: "tag:weldx.bam.de:weldx/aws/design/base_metal-1.0.0"
 title: |
   <TODO DESCRIPTION>
 description: |
-  <TODO DESCRIPTION>
+  None
 type: object
 properties:
   common_name:
