--- a/weldx-standard/schemas/weldx.bam.de/weldx/aws/design/sub_assembly-1.0.0.yaml
+++ b/weldx-standard/schemas/weldx.bam.de/weldx/aws/design/sub_assembly-1.0.0.yaml
@@ -7,15 +7,20 @@ tag: "tag:weldx.bam.de:weldx/aws/design/sub_assembly-1.0.0"
 title: |
   <TODO DESCRIPTION>
 description: |
-  <TODO DESCRIPTION>
+  Two workpieces joined by a weld. Identifies simple weldments that can be joined to form a largermore complicated weldment.
 type: object
 properties:
   workpiece:
     description: |
-      Two workpieces joined by a weld. Identifies simple weldments that can be joined to form a largermore complicated weldment.
+      Describes a piece of metal, its materials and geometries.
     type: array
     items:
-      type: <TODO ASDF_TYPE(Workpiece)>
+      $ref: workpiece-1.0.0
+
+  connection:
+    description: |
+      The joint formed by edge preparation of two workpieces and the weld that joins the workpieces together.
+    $ref: connection-1.0.0
 
 
 
