--- a/weldx-standard/schemas/weldx.bam.de/weldx/aws/design/weldment-1.0.0.yaml
+++ b/weldx-standard/schemas/weldx.bam.de/weldx/aws/design/weldment-1.0.0.yaml
@@ -7,13 +7,15 @@ tag: "tag:weldx.bam.de:weldx/aws/design/weldment-1.0.0"
 title: |
   <TODO DESCRIPTION>
 description: |
-  <TODO DESCRIPTION>
+  An assembly whose component parts are joined by welding
 type: object
 properties:
   sub_assembly:
     description: |
-      An assembly whose component parts are joined by welding
-    type: <TODO ASDF_TYPE(list)>
+      A list of assemblies composing the weldment
+    type: array
+    items:
+      $ref: sub_assembly-1.0.0
 
 
 
