add some docstrings

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,8 @@ ignore =
     E203        # E203 whitespace before ':' (not PEP8 compliant anyway)
 max-line-length = 88
 select = C,E,F,W,B,B950 # black formatting options
-
+per-file-ignores =
+    aws_setup.py:E501
 exclude =
     versioneer.py
     .\weldx\__init__.py
