--- a/weldx-standard/schemas/weldx.bam.de/weldx/aws/design/connection-1.0.0.yaml
+++ b/weldx-standard/schemas/weldx.bam.de/weldx/aws/design/connection-1.0.0.yaml
@@ -12,13 +12,51 @@ type: object
 properties:
   joint_type:
     description: |
-      A weld joint classification based the relative orientation of the members being joined. TODO ENUM
+      A weld joint classification based the relative orientation of the members being joined.
     type: string
+    enum:
+      - butt_joint
+      - corner_joint
+      - t_joint
+      - lap_joint
+      - edge_joint
+      - flanged_butt_joint
+      - flanged_corner_joint
+      - flanged_t_joint
+      - flanged_lap_joint
+      - flanged_edge_joint
 
   weld_type:
     description: |
-      A region of coalescence of materials produced by heating or pressure, that joins two pieces of metal. TODO ENUM
+      A region of coalescence of materials produced by heating or pressure, that joins two pieces of metal.
     type: string
+    enum:
+      - groove
+      - fillet
+      - plug
+      - slot
+      - spot
+      - seam
+      - flange
+      - stud
+      - surfacing
+      - upset
+      - flash
+      - bevelGroove
+      - flareBevelGroove
+      - doubleBevelGroove
+      - jGroove
+      - singleJGroove
+      - uGroove
+      - singleUGroove
+      - doubleUGroove
+      - vGroove
+      - flareVGroove
+      - singleVGroove
+      - doubleVGroove
+      - squareGroove
+      - edgeFlange
+      - braze
 
   joint_penetration:
     description: |
