add asdf test and pytest config

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,11 @@ exclude =
 match = (?!__).*\.py
 match_dir = [^\.][^\docs].*
 
+[tool:pytest]
+addopts = --tb=short --color=yes --cov=weldx tests/ weldx-standard/schemas --cov-report term
+asdf_schema_root = weldx-standard/schemas
+#asdf_schema_tests_enabled = true
+
 [versioneer]
 VCS = git
 versionfile_source = weldx/_version.py
