--- a/weldx-standard/schemas/weldx.bam.de/weldx/core/din_en_iso_9692-1_2013-1.0.0.yaml
+++ b/weldx-standard/schemas/weldx.bam.de/weldx/core/din_en_iso_9692-1_2013-1.0.0.yaml
@@ -121,7 +121,7 @@ anyOf:
             $ref: "tag:stsci.edu:asdf/unit/quantity-1.1.0"
           alpha:
             description: |
-              Bevel angle
+              Groove angle
             $ref: "tag:stsci.edu:asdf/unit/quantity-1.1.0"
           beta:
             description: |
