Add coordinate system manager draft version

--- a/environment.yml
+++ b/environment.yml
@@ -15,7 +15,8 @@ dependencies:
   - sphinx
   - recommonmark
   - openpyxl
-  - networkx # graph package
+  # graph packages
+  - networkx
   # Code quality
   - black
   - codecov
@@ -25,12 +26,12 @@ dependencies:
   - pytest-cov
   - vulture
   # Plotting
-  - graphviz
+  #- graphviz
   - ipykernel
   - ipympl
   - line_profiler
   - matplotlib
   - memory_profiler
-  - python-graphviz
+  #- python-graphviz
   - seaborn
   - snakeviz
