--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -7,7 +7,9 @@ test_patterns = [
 
 exclude_patterns = [
   "docs/**",
-  ".vulture_whitelist.py"
+  ".vulture_whitelist.py",
+  "versioneer.py",
+  "weldx/_version.py"
 ]
 
 [[analyzers]]
