add asdf whitelists for vulture and deepsource (for now)
__init__.py imports should be resolved in current vulture release (https://github.com/jendrikseipp/vulture/pull/193)

--- a/.github/workflows/vulture.yml
+++ b/.github/workflows/vulture.yml
@@ -19,4 +19,4 @@ jobs:
     - name: Run vulture
       run: |
         source activate weldx
-        vulture .
+        vulture . --exclude weldx/asdf/,versioneer.py,weldx/_version.py,*__init__.py
