--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -9,7 +9,8 @@ exclude_patterns = [
   "docs/**",
   ".vulture_whitelist.py",
   "versioneer.py",
-  "weldx/_version.py"
+  "weldx/_version.py",
+  "weldx/asdf/**"
 ]
 
 [[analyzers]]
