update schema path and add WeldxAsdfExtension entrypoint

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
-recursive-include weldx-standard *.yaml
+recursive-include weldx/asdf/schemas *.yaml
 include versioneer.py
 include weldx/_version.py
