--- a/setup.cfg
+++ b/setup.cfg
@@ -20,8 +20,8 @@ match = (?!__).*\.py
 match_dir = [^\.][^\docs].*
 
 [tool:pytest]
-addopts = --tb=short --color=yes --cov=weldx tests/ weldx-standard/schemas --cov-report term
-asdf_schema_root = weldx-standard/schemas
+addopts = --tb=short --color=yes --cov=weldx tests/ weldx/asdf/schemas --cov-report term
+asdf_schema_root = weldx/asdf/schemas
 #asdf_schema_tests_enabled = true
 
 [versioneer]
