--- a/.github/workflows/conda_build.yml
+++ b/.github/workflows/conda_build.yml
@@ -1,21 +1,21 @@
-name: CI Linux
+name: conda build
 on: [push]
 
 jobs:
   test:
-    name: CI Build
+    name: conda build (local)
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-18.04, ubuntu-latest]
+        os: [ubuntu-18.04]
     steps:
     - uses: actions/checkout@v1
     - name: Include $CONDA in $PATH
       run: echo ::add-path::$CONDA/bin
     - name: Print conda info
       run: conda info -a
-    - name: Create conda environment
-      run: conda env create -f ./environment.yml
+    - name: Create conda build environment
+      run: conda env create -f ./conda.recipe/build_env.yml
     - name: Run tests
       run: |
         source activate build_env
