--- a/.github/workflows/conda_build.yml
+++ b/.github/workflows/conda_build.yml
@@ -12,11 +12,13 @@ jobs:
     - uses: actions/checkout@v1
     - name: Include $CONDA in $PATH
       run: echo ::add-path::$CONDA/bin
-    - name: Print conda info
-      run: conda info -a
+    - name: Add conda-forge & print conda info
+      run: |
+        conda config --append channels conda-forge
+        conda info -a
     - name: Create conda build environment
       run: conda env create -f ./conda.recipe/build_env.yml
-    - name: Run tests
+    - name: Build from local conda recipe
       run: |
         source activate build_env
         conda build .
