fix enum to single value const in din_en_iso_9692-1_2013-1.0.0.yaml

--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/din_en_iso_9692-1_2013-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/din_en_iso_9692-1_2013-1.0.0.yaml
@@ -13,8 +13,8 @@ title: |
 description: |
   see title.
 
-examples:
-  -TODO
+# examples:
+#  -TODO
 
 anyOf:
   # Single U Groove
@@ -57,7 +57,7 @@ anyOf:
     properties:
       type:
         type: string
-        enum: SingleVGroove
+        const: SingleVGroove
       components:
         type: object
         properties:
