--- a/setup.cfg
+++ b/setup.cfg
@@ -5,18 +5,18 @@
 
 # Note: there cannot be spaces after comma's here
 ignore =
-    W503,W504   # line break after binary operator
+    W503,W504,  # line break after binary operator
     E203        # E203 whitespace before ':' (not PEP8 compliant anyway)
 max-line-length = 88
 select = C,E,F,W,B,B950 # black formatting options
 per-file-ignores =
     aws_setup.py:E501
 exclude =
-    versioneer.py
-    .\weldx\__init__.py
+    versioneer.py,
+    __init__.py
 
 [pydocstyle]
-match = (?!__).*\.py
+match = (?!__)(?!versioneer)(?!_version).*\.py
 match_dir = [^\.][^\docs].*
 
 [tool:pytest]
