--- a/.github/workflows/pydocstyle.yml
+++ b/.github/workflows/pydocstyle.yml
@@ -2,7 +2,7 @@ name: pydocstyle
 on: [push]
 
 jobs:
-  test:
+  pydocstyle:
     name: pydocstyle
     runs-on: ${{ matrix.os }}
     strategy:
@@ -10,13 +10,36 @@ jobs:
         os: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v1
-      - name: Include $CONDA in $PATH
-        run: echo ::add-path::$CONDA/bin
-      - name: Print conda info
-        run: conda info -a
-      - name: Create conda environment
-        run: conda env create -f ./environment.yml
-      - name: Run pydocstyle
+      - name: pip installs
+        run: pip install pydocstyle
+      - name: run pydocstyle
         run: |
-          source activate weldx
           pydocstyle
+
+  flake8:
+    name: flake8
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+    steps:
+      - uses: actions/checkout@v1
+      - name: pip installs
+        run: pip install flake8
+      - name: run flake8
+        run: |
+          flake8
+
+  flake8-docstrings:
+    name: flake8-docstrings
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+    steps:
+      - uses: actions/checkout@v1
+      - name: pip installs
+        run: pip install flake8 pydocstyle flake8-docstrings
+      - name: run flake8
+        run: |
+          flake8
