--- a/.github/workflows/pydocstyle.yml
+++ b/.github/workflows/pydocstyle.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v1
       - uses: actions/setup-python@v1
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: ${{ matrix.py }}
       - name: pip installs
         run: pip install pydocstyle==5.*
       - name: run pydocstyle
@@ -31,7 +31,7 @@ jobs:
       - uses: actions/checkout@v1
       - uses: actions/setup-python@v1
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: ${{ matrix.py }}
       - name: pip installs
         run: pip install flake8==3.7.*
       - name: run flake8
@@ -49,7 +49,7 @@ jobs:
       - uses: actions/checkout@v1
       - uses: actions/setup-python@v1
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: ${{ matrix.py }}
       - name: pip installs
         run: pip install flake8==3.7.* pydocstyle==5.* flake8-docstrings
       - name: run flake8
