--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,9 +1,28 @@
-name: CI Windows
+name: pytest
 on: [push]
 
 jobs:
-  test:
-    name: CI Build
+  pytest-linux:
+    name: pytest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-18.04, ubuntu-latest]
+    steps:
+    - uses: actions/checkout@v1
+    - name: Include $CONDA in $PATH
+      run: echo ::add-path::$CONDA/bin
+    - name: Print conda info
+      run: conda info -a
+    - name: Create conda environment
+      run: conda env create -f ./environment.yml
+    - name: Run tests
+      run: |
+        source activate weldx
+        pytest
+
+  pytest-win:
+    name: pytest
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
