--- a/.github/workflows/static_analysis.yml
+++ b/.github/workflows/static_analysis.yml
@@ -37,3 +37,21 @@ jobs:
       - name: run flake8
         run: |
           flake8
+
+  vulture:
+    name: vulture
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-18.04]
+        py: [ '3.7', '3.8' ]
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/setup-python@v1
+        with:
+          python-version: ${{ matrix.py }}
+      - name: pip installs
+        run: pip install vulture==1.4
+      - name: run vulture
+        run: |
+          vulture .
