--- a/setup.cfg
+++ b/setup.cfg
@@ -20,9 +20,9 @@ match = (?!__)(?!versioneer)(?!_version).*\.py
 match_dir = [^\.][^\docs].*
 
 [tool:pytest]
-addopts = --tb=short --color=yes --cov=weldx tests/ --cov-report term
+addopts = --tb=short --color=yes --cov=weldx --cov-report term
 asdf_schema_root = weldx/asdf/schemas
-asdf_schema_tests_enabled = true
+#asdf_schema_tests_enabled = true
 
 [versioneer]
 VCS = git
