--- a/.github/workflows/pytest_asdf.yml
+++ b/.github/workflows/pytest_asdf.yml
@@ -2,25 +2,43 @@ name: pytest asdf
 on: [push]
 
 jobs:
+#  pytest:
+#    name: pytest asdf
+#    runs-on: ${{ matrix.os }}
+#    strategy:
+#      matrix:
+#        os: [ubuntu-18.04]
+#    steps:
+#    - uses: actions/checkout@v1
+#    - name: Include $CONDA in $PATH
+#      run: echo ::add-path::$CONDA/bin
+#    - name: Print conda info
+#      run: conda info -a
+#    - name: Create conda environment
+#      run: conda env create -f ./environment.yml
+#    - name: Conda develop install of source package for ASDF Schema links
+#      run: |
+#        conda install conda-build -n weldx
+#    - name: Run tests with added asdf schema file location
+#      run: |
+#        source activate weldx
+#        python setup.py install --user
+#        pytest --asdf-tests --ignore=tests/
   pytest:
     name: pytest asdf
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-18.04]
+        py: [ '3.7', '3.8' ]
     steps:
-    - uses: actions/checkout@v1
-    - name: Include $CONDA in $PATH
-      run: echo ::add-path::$CONDA/bin
-    - name: Print conda info
-      run: conda info -a
-    - name: Create conda environment
-      run: conda env create -f ./environment.yml
-    - name: Conda develop install of source package for ASDF Schema links
-      run: |
-        conda install conda-build -n weldx
-    - name: Run tests with added asdf schema file location
-      run: |
-        source activate weldx
-        python setup.py install --user
-        pytest pytest --asdf-tests --ignore=tests/
+      - uses: actions/checkout@v1
+      - uses: actions/setup-python@v1
+        with:
+          python-version: ${{ matrix.py }}
+      - name: pip installs
+        run: |
+          pip install pytest
+          pip install .
+      - name: run pytest
+        pytest --asdf-tests --ignore=tests/
