--- a/.github/workflows/pytest_asdf.yml
+++ b/.github/workflows/pytest_asdf.yml
@@ -41,4 +41,5 @@ jobs:
           pip install pytest
           pip install .
       - name: run pytest
-        pytest --asdf-tests --ignore=tests/
+        run: |
+          pytest --asdf-tests --ignore=tests/
