add pytest-cov to pip installs

--- a/.github/workflows/pytest_asdf.yml
+++ b/.github/workflows/pytest_asdf.yml
@@ -38,7 +38,7 @@ jobs:
           python-version: ${{ matrix.py }}
       - name: pip installs
         run: |
-          pip install pytest
+          pip install pytest pytest-cov
           pip install .
       - name: run pytest
         run: |
