--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,7 @@ match = (?!__).*\.py
 match_dir = [^\.][^\docs].*
 
 [tool:pytest]
+addopts = --tb=short --color=yes --cov=weldx --cov-report term-missing
 # costum test markers, see https://docs.pytest.org/en/latest/example/markers.html#mark-examples
 markers =
     slow: marks tests as slow (deselect from pytest run with '-m "not slow"' option)
