--- a/.github/workflows/static_analysis.yml
+++ b/.github/workflows/static_analysis.yml
@@ -6,6 +6,7 @@ jobs:
     name: pydocstyle
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-18.04]
         py: [ '3.7', '3.8' ]
@@ -24,6 +25,7 @@ jobs:
     name: flake8
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-18.04]
         py: [ '3.7', '3.8' ]
@@ -42,6 +44,7 @@ jobs:
     name: vulture
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-18.04]
         py: [ '3.7', '3.8' ]
