update typo-ci config

--- a/.typo-ci.yml
+++ b/.typo-ci.yml
@@ -12,6 +12,8 @@ excluded_words:
   - typoci
   # python packages -----------------------------
   - numpy
+  - pandas
+  - xarray
   - scipy
   - pytest
   - pydocstyle
@@ -42,3 +44,4 @@ excluded_words:
   - ipython
   # other ---------------------------------------
   - linearization
+  - coords
