add basic pandas time data types as asdf types
Timedelta: ISO format string
TimedeltaIndex: array of nanosecond ints
Timestamp: ISO format string
DatetimeIndex: array of unix nanosecond ints

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,7 @@ match = (?!__)(?!versioneer)(?!_version).*\.py
 match_dir = [^\.][^\docs].*
 
 [tool:pytest]
-addopts = --tb=short --color=yes --cov=weldx --cov-report term
+addopts = --tb=short --color=yes --cov=weldx --cov-report=term-missing:skip-covered
 asdf_schema_root = weldx/asdf/schemas
 #asdf_schema_tests_enabled = true
 
