--- a/weldx/asdf/schemas/weldx.bam.de/weldx/unit/dimension-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/unit/dimension-1.0.0.yaml
@@ -10,7 +10,7 @@ type: object
 properties:
   name:
     description: |
-      String represenation of the dimension.
+      String representation of the dimension.
       Names follow https://github.com/hgrecco/pint/blob/master/pint/default_en.txt
     type: string
     enum:
