--- a/weldx/asdf/schemas/weldx.bam.de/weldx/time/timestamp-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/time/timestamp-1.0.0.yaml
@@ -10,7 +10,7 @@ type: object
 properties:
   value:
     description: |
-      String or integer represenation of the timestamp in full ISO format.
+      String or integer representation of the timestamp in full ISO format.
     type: string
     pattern: "[0-9]{4}-(0[1-9])|(1[0-2])-(0[1-9])|([1-2][0-9])|(3[0-1])[T ]([0-1][0-9])|(2[0-4]):[0-5][0-9]:[0-5][0-9](.[0-9]+)?"# pattern string does not seem to work correctly.. ?
     # the pattern is taken from asdf time but incomplete, still keep it for now
