move coverage config to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,20 @@ addopts = --tb=short --color=yes --cov=weldx --cov-report=term-missing:skip-cove
 asdf_schema_root = weldx/asdf/schemas
 #asdf_schema_tests_enabled = true
 
+[coverage:report]
+omit =
+    weldx/_version.py
+    weldx/scripts/*
+
+exclude_lines =
+    # Have to re-enable the standard pragma
+    pragma: no cover
+
+    # Don't complain about missing debug-only code:
+    def __repr__
+    if self\.debug
+
+
 [versioneer]
 VCS = git
 versionfile_source = weldx/_version.py
