--- a/weldx/asdf/schemas/weldx.bam.de/weldx/time/timedeltaindex-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/time/timedeltaindex-1.0.0.yaml
@@ -6,40 +6,55 @@ tag: "tag:weldx.bam.de:weldx/time/timedeltaindex-1.0.0"
 
 title: |
   Represents an instance in time.
+
+definitions:
+  values:
+    description: |
+      Integer representation of a pandas TimedeltaIndex in nanoseconds precision.
+    $ref: tag:stsci.edu:asdf/core/ndarray-1.0.0
+
+  start:
+    description: |
+      Timedelta of the first value.
+    $ref: timedelta-1.0.0
+
+  end:
+    description: |
+      Timedelta of the last value.
+    $ref: timedelta-1.0.0
+
+  freq:
+    description: |
+      Optional string to describe the frequency in pandas offset style.
+      See https://pandas.pydata.org/pandas-docs/stable/user_guide/timeseries.html#offset-aliases .
+    type: string
+    # TODO: match pattern for pandas string? Maybe in pandas code?
+
+  min:
+    description: |
+      Minimum timedelta in the index.
+    $ref: timedelta-1.0.0
+
+  max:
+    description: |
+      Maximum timedelta in the index.
+    $ref: timedelta-1.0.0
+
 anyOf:
   - type: object
     properties:
       values:
-        description: |
-          Integer representation of a pandas TimedeltaIndex in nanoseconds precision.
-        $ref: tag:stsci.edu:asdf/core/ndarray-1.0.0
-
+        $ref: "#/definitions/values"
       start:
-        description: |
-          Timedelta of the first value.
-        $ref: timedelta-1.0.0
-
+        $ref: "#/definitions/start"
       end:
-        description: |
-          Timedelta of the last value.
-        $ref: timedelta-1.0.0
-
+        $ref: "#/definitions/end"
       freq:
-        description: |
-          Optional string to describe the frequency in pandas offset style.
-          See https://pandas.pydata.org/pandas-docs/stable/user_guide/timeseries.html#offset-aliases .
-        type: string
-        # TODO: match pattern for pandas string? Maybe in pandas code?
-
+        $ref: "#/definitions/freq"
       min:
-        description: |
-          Minimum timedelta in the index.
-        $ref: timedelta-1.0.0
-
+        $ref: "#/definitions/min"
       max:
-        description: |
-          Maximum timedelta in the index.
-        $ref: timedelta-1.0.0
+        $ref: "#/definitions/max"
 
     required: [values]
     propertyOrder: [values, start, end, freq, min, max]
@@ -48,31 +63,15 @@ anyOf:
   - type: object
     properties:
       start:
-        description: |
-          Timedelta of the first value.
-        $ref: timedelta-1.0.0
-
+        $ref: "#/definitions/start"
       end:
-        description: |
-          Timedelta of the last value.
-        $ref: timedelta-1.0.0
-
+        $ref: "#/definitions/end"
       freq:
-        description: |
-          Optional string to describe the frequency in pandas offset style.
-          See https://pandas.pydata.org/pandas-docs/stable/user_guide/timeseries.html#offset-aliases .
-        type: string
-        # TODO: match pattern for pandas string? Maybe in pandas code?
-
+        $ref: "#/definitions/freq"
       min:
-        description: |
-          Minimum timedelta in the index.
-        $ref: timedelta-1.0.0
-
+        $ref: "#/definitions/min"
       max:
-        description: |
-          Maximum timedelta in the index.
-        $ref: timedelta-1.0.0
+        $ref: "#/definitions/max"
 
     required: [start, end, freq]
     propertyOrder: [start, end, freq, min, max]
